--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://euleobispo.hopto.org/"
 title = "um sitezinho"
 languageCode = "pt-BR"
 theme = "devise"
